--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -33,7 +33,7 @@
 .app__footer-links_logo img:first-child {
     width: 300px;
     margin-bottom: 0.75rem;
-    filter: 1;
+    filter: var(--color-golden);
 }
 
 
