--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     background: var(--color-black);
+
     padding: 1rem 2rem;
 }
 
@@ -22,6 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     list-style: none;
 }
 
@@ -29,6 +31,7 @@
     margin: 0 1rem;
     cursor: pointer;
 }
+
 .app__navbar-links li:hover {
     color: var(--color-grey);
 }
@@ -39,12 +42,12 @@
     align-items: center;
 }
 
-
 .app__navbar-login a {
     margin: 0 1rem;
     text-decoration: none;
-    transition: 0.5s ease;
+    transition: .5s ease;
 }
+
 .app__navbar-login a:hover {
     border-bottom: 1px solid var(--color-golden);
 }
@@ -66,7 +69,8 @@
     width: 100%;
     height: 100vh;
     background: var(--color-black);
-    transition: 0.5s ease-in-out;
+    transition: .5s ease;
+
     flex-direction: column;
     z-index: 5;
 }
@@ -75,6 +79,7 @@
     font-size: 27px;
     color: var(--color-golden);
     cursor: pointer;
+
     position: absolute;
     top: 20px;
     right: 20px;
@@ -93,27 +98,26 @@
     font-family: var(--font-base);
 }
 
-
 .app__navbar-smallscreen_links li:hover {
     color: var(--color-white);
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
     .app__navbar-logo img {
         width: 210px;
     }
 }
 
-
 @media screen and (max-width: 1150px) {
     .app__navbar-links {
         display: none;
     }
-    
+
     .app__navbar-smallscreen {
         display: flex;
     }
 }
+
 @media screen and (max-width: 650px) {
     .app__navbar {
         padding: 1rem;
