--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -6,6 +6,7 @@
     position: absolute;
     inset: 0;
 }
+
 .app__aboutus-overlay img {
     width: 391px;
     height: 415px;
@@ -23,6 +24,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
+
     text-align: right;
 }
 
@@ -40,6 +42,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
+
     text-align: left;
 }
 
@@ -49,24 +52,27 @@
     color: var(--color-grey);
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
     .app__aboutus-content_knife img {
         height: 1110px;
     }
+
     .app__aboutus-content_about p,
     .app__aboutus-content_history p {
-    margin: 4rem 0;
+        margin: 4rem 0;
+    }
 }
 
-}
 @media screen and (max-width: 900px) {
     .app__aboutus-content {
         flex-direction: column;
     }
+
     .app__aboutus-content_knife {
         margin: 4rem 0;
     }
 }
+
 @media screen and (max-width: 650px) {
     .app__aboutus-overlay img {
         width: 80%;
