--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+
     margin-top: 5rem;
 }
 
@@ -10,6 +11,7 @@
     justify-content: flex-start;
     align-items: flex-end;
 }
+
 .app__chef-content_quote img {
     width: 47px;
     height: 40px;
@@ -25,7 +27,7 @@
     font-family: var(--font-base);
     font-weight: 400;
     font-size: 32px;
-    line-height: 41px;
+    line-height: 41.6px;
     letter-spacing: 0.04em;
     text-transform: capitalize;
     color: var(--color-golden);
@@ -36,7 +38,7 @@
     margin-top: 3rem;
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
     .app__chef-sign img {
         width: 370px;
     }
