--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,15 +1,5 @@
 .app__header {
-    display: flex;
-    flex-direction: row;
-    
     background-color: var(--color-black);
-    align-items: center; /* Untuk mengatur vertikal secara tengah */
-}
-
-.app__wrapper_info {
-    flex: 1; /* Ini akan mengambil sisa ruang yang tersedia */
-    display: flex;
-    justify-content: center;
 }
 
 .app__header-h1 {
@@ -18,18 +8,37 @@
     font-weight: 700;
     letter-spacing: 0.04em;
     text-transform: capitalize;
+    line-height: 117px;
     font-size: 90px;
-    margin: 0; /* Hilangkan margin bawaan h1 untuk menghindari jarak yang tidak diinginkan */
 }
 
-.app__wrapper_img {
-    flex: 1; /* Ini akan mengambil sisa ruang yang tersedia */
-    display: flex;
-    justify-content: center;
-    align-items: center; /* Untuk mengatur vertikal secara tengah */
+.app__header-img img {
+    width: 80%;
 }
 
-.app__wrapper_img img {
-    max-width: 100%; /* Gunakan max-width agar gambar tidak melebihi lebar container */
-    height: auto; /* Biarkan tinggi gambar disesuaikan dengan lebar untuk menjaga rasio aspek */
+@media screen and (min-width: 2000px) {
+    .app__header-h1 {
+        font-size: 180px;
+        line-height: 210px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .app__header-h1 {
+        font-size: 90px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .app__header-h1 {
+        font-size: 70px;
+        line-height: 87px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .app__header-h1 {
+        font-size: 50px;
+        line-height: 70px;
+    }
 }
